--- a/form/style.css
+++ b/form/style.css
@@ -1,4 +1,5 @@
-:root {
+:root
+{
     --background-color: #f4f4f4;
     --container-background-color: #fff;
     --border-color: #ccc;
@@ -6,40 +7,67 @@
     --primary-hover-color: #0056b3;
     --button-color:#fff;
 }
-
-* {
+::-webkit-scrollbar {
+    display: none;
+}
+*
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
+body
+{
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
 }
-
-.container {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: var(--container-background-color);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.containerHigh
+{
     display: flex;
-    align-items:  flex-start;
-    justify-content:  space-around;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-
-h1 {
+h1{
     text-align: center;
-    margin: 20px;
-    background-color: #00b957;
+    padding: 10px;
+    background-color: rgb(0, 209, 94);
+    color: white;
+}
+h2
+{
+    text-align: center;
+    background-color: #007bff;
     color: #fff;
+    margin-top: 30px;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 800px;
+    
+}
+.main-container
+{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat();
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    width: 800px;
+    padding: 10px;
+    background-color: var(--container-background-color);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-items: center;
 }
 
 .form-group {
-    margin-bottom: 20px;
-    width: 250px;
+    width: 350px;
+    padding: 10px;
 }
 
 label {
@@ -66,31 +94,15 @@ textarea:focus {
     border-color: var(--primary-color);
 }
 
-.sidebox{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-}
-
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: var(--primary-color);
-    color: var(--button-color);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: var(--primary-hover-color);
-}
-
 @media (max-width: 768px) {
-    .container {
-        margin: 20px;
-        flex-direction: column;
+    .main-container {
+        grid-template-columns: repeat(1, 1fr);
+        max-width: 400px;
+    }
+    .containerHigh
+    {
+        width: 100vw;
+        overflow: hidden;
+        align-items: center;
     }
 }
