--- a/style.css
+++ b/style.css
@@ -68,12 +68,16 @@ h2
 .form-group {
     width: 350px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end
 }
 
 label {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
+    padding-top: 10px;
 }
 
 input, select {
@@ -82,6 +86,7 @@ input, select {
     border: 1px solid var(--border-color);
     border-radius: 5px;
 }
+
 textarea {
     width: 100%;
     padding: 10px;
@@ -94,6 +99,23 @@ textarea:focus {
     border-color: var(--primary-color);
 }
 
+.dropdown {
+    display: none;
+    margin-top: 10px;
+    padding: 10px;
+    margin:10px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#if-you-dont-visit-places-why{
+    display: none;
+}
+label[for=if-you-dont-visit-places-why]{
+    display: none;
+}
+
+
 @media (max-width: 768px) {
     .main-container {
         grid-template-columns: repeat(1, 1fr);
@@ -105,4 +127,8 @@ textarea:focus {
         overflow: hidden;
         align-items: center;
     }
+    h2{
+        max-width: 400px;
+    }
+    
 }
